# Multi_Agentic_System

./: .gitignore  .profile  .renderignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.huggingface  NOT_DJANGO  PROJECT_REPORT.md  Procfile  README.md  RENDER_ENV_SETUP.md  WEB_SEARCH_ENHANCEMENTS.md  app.py  debug_pdf_query.py  dev_selftest.py  docker-compose.yml  pyproject.toml  render.json  render.yaml  render_start.sh  requirements.txt  run_app.py  start.ps1  start.sh  system_test.py  test_web_search_enhancements.py
.github/workflows/: deploy.yml
agents/: arxiv_agent.py  controller_agent.py  pdf_rag_agent.py  web_search_agent.py
frontend/: index.html
tests/: conftest.py  test_controller.py  test_endpoints.py  test_external_agents.py  test_new_endpoints.py  test_pdf_rag.py
